--- a/ui/src/app/views/settings/worker-model/edit/worker-model.edit.scss
+++ b/ui/src/app/views/settings/worker-model/edit/worker-model.edit.scss
@@ -1,1 +1,18 @@
 @import '../../../../../common';
+
+nz-col {
+  padding: 0 5px;
+}
+
+.nzSegment {
+  margin-top: 15px;
+  padding: 15px 15px;
+}
+.nzSegment {
+  h3 {
+    .anticon {
+      cursor: pointer;
+    }
+  }
+}
+
