--- a/ui/src/app/views/settings/workflow-template/add/workflow-template.add.scss
+++ b/ui/src/app/views/settings/workflow-template/add/workflow-template.add.scss
@@ -1,1 +1,13 @@
 @import '../../../../../common';
+
+nz-col {
+  padding: 0 5px;
+}
+
+.nzSegment {
+  padding: 20px 20px;
+}
+
+nz-alert {
+  margin-bottom: 15px;
+}
