--- a/ui/src/app/views/settings/worker-model/help/worker-model.help.html
+++ b/ui/src/app/views/settings/worker-model/help/worker-model.help.html
@@ -1,23 +1,31 @@
-<div class="three wide column">
-    <div class="ui segment">
-        <h2 class="ui header"><i class="fa fa-book"></i> {{ 'settings_tips' | translate }}</h2>
-        <p>{{'worker_model_help_line_1' | translate}}</p>
-        <p>{{'worker_model_help_line_2' | translate}}</p>
-
-        <i class="fa fa-question-circle"></i> {{'worker_model_help_howtos' | translate}}
-        <div class="ui list">
-            <a class="item" target="_blank" rel="noopener noreferrer" 
-                href="#" [routerLink]="['/docs', 'docs', 'tutorials', 'worker_model-docker']">
-                {{'worker_model_help_howto_link_1' | translate}}</a>
-            <a class="item" target="_blank" rel="noopener noreferrer"
-                href="#" [routerLink]="['/docs', 'docs', 'tutorials', 'worker_model-docker', 'docker-customized']">
-                {{'worker_model_help_howto_link_2' | translate}}</a>
-            <a class="item" target="_blank" rel="noopener noreferrer"
-                href="#" [routerLink]="['/docs', 'docs', 'tutorials', 'worker_model-openstack']">
-                {{'worker_model_help_howto_link_3' | translate}}</a>
-            <a class="item" target="_blank" rel="noopener noreferrer"
-                href="#" [routerLink]="['/docs', 'docs', 'concepts', 'worker-model']">
-                {{'common_read_more' | translate}}</a>
-        </div>
+<div class="nzSegment">
+        <h2><span nz-icon nzType="book" nzTheme="outline"></span> Tips</h2>
+        <p>The goal of CDS is to start a worker when you need it, which should match all your requirements exactly.
+            In order to scale automatically on demand, it is possible to register a worker model.</p>
+        <p>The goal of a worker model is to describe the capabilities of a given docker/iso image in terms of architecture,
+            pre-installed binaries or libraries..</p>
+        <div> <span nz-icon nzType="question-circle" nzTheme="outline"></span> {{'worker_model_help_howtos' | translate}}</div>
+        <ul>
+            <li>
+                <a class="item" target="_blank" rel="noopener noreferrer"
+                   href="#" [routerLink]="['/docs', 'docs', 'tutorials', 'worker_model-docker']">
+                    {{'worker_model_help_howto_link_1' | translate}}</a>
+            </li>
+            <li>
+                <a class="item" target="_blank" rel="noopener noreferrer"
+                   href="#" [routerLink]="['/docs', 'docs', 'tutorials', 'worker_model-docker', 'docker-customized']">
+                    {{'worker_model_help_howto_link_2' | translate}}</a>
+            </li>
+            <li>
+                <a class="item" target="_blank" rel="noopener noreferrer"
+                   href="#" [routerLink]="['/docs', 'docs', 'tutorials', 'worker_model-openstack']">
+                    {{'worker_model_help_howto_link_3' | translate}}</a>
+            </li>
+            <li>
+                <a class="item" target="_blank" rel="noopener noreferrer"
+                   href="#" [routerLink]="['/docs', 'docs', 'concepts', 'worker-model']">
+                    {{'common_read_more' | translate}}</a>
+            </li>
+        </ul>
     </div>
-</div>
+
