--- a/ui/src/app/views/settings/workflow-template/edit/workflow-template.edit.scss
+++ b/ui/src/app/views/settings/workflow-template/edit/workflow-template.edit.scss
@@ -1,1 +1,12 @@
 @import '../../../../../common';
+nz-col {
+  padding: 0 5px;
+  margin-bottom: 10px;
+}
+.nzSegment {
+  padding: 20px 20px;
+}
+
+.rightColumn {
+  margin-top: 20px;
+}
